--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,17 +9,12 @@ android {
         minSdkVersion 20
         targetSdkVersion 23
         versionCode 2
-        versionName "1.2"
+        versionName "2.0"
     }
     buildTypes {
-        debugProguard {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable true
-        }
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     lintOptions {
