--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
   compile 'io.reactivex:rxandroid:1.1.0'
   compile 'io.reactivex:rxjava:1.1.0'
   compile 'com.jakewharton:butterknife:7.0.1'
+  compile 'de.greenrobot:greendao:2.1.0'
 }
